--- a/src/index.css
+++ b/src/index.css
@@ -33,27 +33,28 @@ a {
 }
 
 .dropdown-menu{
-  position: absolute;
-  top: 100px;
-  right: 20px;
+  position: relative;
+  top: 0px;
+  left: 0px;
   background-color: #fff;
   border-radius: var(--border-radius);
-  padding: 10px 20px;
+  padding: 5px;
   width: 200px;
 }
 
-.dropdown-menu::before{
+.dropdown-menu::before{ /*save this to change later*/
   content: '';
   position: absolute;
-  top: -5px;
+  top: 0px;
   right: 20px;
-  height: 20px;
-  width: 20px;
+  height: 0px;
+  width: 0px;
   background: var(--secondary-bg);
   transform: rotate(45deg);
 }
 
 .dropdown-menu.active{
+  position: relative;
   opacity: 1;
   visibility: visible;
   transform: translateY(0);
@@ -61,6 +62,7 @@ a {
 }
 
 .dropdown-menu.inactive{
+  position: absolute;
   opacity: 0;
   visibility: hidden;
   transform: translateY(-20px);
