--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+.dropdownList {
+  display: flex;
+  flex-direction: column;
+  margin: 0px;
+}
+
 .trackField {
   position: absolute;
   height: 100vh;
@@ -38,7 +44,14 @@
   width: 100vw;
   height: 90vh;
 }
-
+#graphForm {
+  background-color: #4CAF50;
+  color: white !important;
+  padding: 14px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
 #user-bar {
   width: 100vw;
   height: 10vh;
