--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,20 @@
   width: auto;
   height: 100vh;
   position: relative;
+  
+  align-self: center;
   z-index: 0;
+}
+
+img {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
 }
 
 .App {
