--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
+@keyframes line-fade {
+  0%{
+    transform: scale(1.00);
+    opacity: 1;
+  }
+  33%{
+    transform: scale(1.30);
+    opacity: .66;
+  }
+  100%{
+    transform: scale(1.5);
+    opacity: 0;
+  }
+}
+
 .fieldPNG {
   width: auto;
   height: 100vh;
